--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".Main_Activity">
+    tools:context=".MainActivity">
 
     <Button
         android:id="@+id/button"
@@ -17,7 +17,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="15dp"
         android:onClick="ajouter"
-        android:text="Button" />
+        android:text="@string/add" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/idRVCourse"
