--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,33 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/add"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="13dp"
-        android:onClick="ajouter"
-        android:text="@string/add" />
+        android:background="@color/header">
+
+        <EditText
+            android:id="@+id/editTextText3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="8dp"
+            android:autofillHints=""
+            android:ems="10"
+            android:hint="@string/new_task"
+            android:inputType="text"
+            android:text="" />
+
+        <Button
+            android:id="@+id/add"
+            android:layout_width="119dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="6dp"
+            android:onClick="ajouter"
+            android:text="@string/add" />
+    </LinearLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/idRVCourse"
@@ -26,24 +43,10 @@
         android:layout_height="658dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="13dp" />
 
-    <EditText
-        android:id="@+id/editTextText3"
-        android:layout_width="274dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="121dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/new_task"
-        android:inputType="text"
-        android:text="" />
+
 
 </RelativeLayout>
