--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
             android:ems="10"
             android:hint="@string/new_task"
             android:inputType="text"
-            android:text="" />
+            android:text=""
+            tools:ignore="DuplicateIds" />
 
         <Button
             android:id="@+id/add"
@@ -52,6 +53,5 @@
         android:layout_alignParentBottom="true"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         tools:ignore="MissingConstraints" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
