--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -13,8 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
-        android:orientation="vertical"
-        android:onClick="consulter">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/idTVCourseName"
