--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -13,8 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
-        android:orientation="vertical"
-        android:onClick="consulter">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/idTVCourseName"
@@ -41,11 +40,16 @@
 
     </LinearLayout>
 
-    <CheckBox
-        android:id="@+id/idTVCourseCheck"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+    <ImageView
+        android:id="@+id/idTVCourseImg"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="end"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:src="@drawable/check"
+        android:maxWidth="50dp"
+        android:maxHeight="50dp"
         android:width="50dp" />
 
 </androidx.cardview.widget.CardView>
